fix background for dark mode

--- a/static/site.css
+++ b/static/site.css
@@ -1,3 +1,14 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #0d1117;
+  }
+}
+
 zero-md {
   max-width: 800px;
   margin-right: auto;
